--- a/gestion/ofertas/index.html
+++ b/gestion/ofertas/index.html
@@ -12,35 +12,40 @@
 
     <style>
         body { font-family: Arial, sans-serif; max-width: 800px; margin: auto; padding: 20px; text-align: center; }
+        button { background-color: #007BFF; color: white; padding: 10px; border: none; border-radius: 12px; cursor: pointer; margin: 10px 0; }
+        button:hover { background-color: #0056b3; }
         table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-        th, td { border: 1px solid #ddd; padding: 10px; text-align: left; }
+        th, td { padding: 10px; border: 1px solid #ddd; text-align: center; }
         th { background-color: #f4f4f4; }
-        button { padding: 5px 10px; border-radius: 8px; cursor: pointer; }
-        .editar { background-color: #FFC107; }
-        .editar:hover { background-color: #E0A800; }
-        .pdf { background-color: #007BFF; color: white; }
-        .pdf:hover { background-color: #0056b3; }
+        .btn-small { padding: 5px; font-size: 14px; }
+        .delete-btn { background-color: red; }
+        .delete-btn:hover { background-color: darkred; }
     </style>
 </head>
 <body>
 
     <h2>Gestión de Ofertas</h2>
-    <button onclick="window.location.href='creator.html'">➕ Crear Nueva Oferta</button>
+    <button onclick="window.location.href='../'">🔙 Volver</button>
+    <button onclick="window.location.href='crear.html'">➕ Crear Oferta</button>
 
+    <h3>Ofertas Existentes</h3>
     <table>
         <thead>
             <tr>
+                <th>ID</th>
                 <th>Cliente</th>
-                <th>Subtotal (€)</th>
-                <th>Total (€)</th>
+                <th>Importe</th>
+                <th>Estado</th>
                 <th>Acciones</th>
             </tr>
         </thead>
-        <tbody id="ofertas-lista"></tbody>
+        <tbody id="tabla-ofertas">
+            <tr><td colspan="5">Cargando ofertas...</td></tr>
+        </tbody>
     </table>
 
     <script>
-        // 🔹 Inicializar Firebase
+        // 🔹 Verifica si Firebase ya está inicializado antes de usarlo
         if (!firebase.apps.length) {
             const firebaseConfig = {
                 apiKey: "AIzaSyAst9f2-Jro1d4OX0henL8OeKXT4Ds35uA",
@@ -54,46 +59,76 @@
             firebase.initializeApp(firebaseConfig);
         }
 
+        // 🔹 Inicializar Firestore y Auth
+        const db = firebase.firestore();
+        const auth = firebase.auth();
+
+        // 🔹 Esperar autenticación antes de cargar datos
+        auth.onAuthStateChanged(user => {
+            if (user) {
+                console.log("✅ Usuario autenticado:", user.email);
+                cargarOfertas();
+            } else {
+                console.error("❌ Usuario no autenticado, redirigiendo...");
+                window.location.href = "../"; 
+            }
+        });
+
         // 🔹 Cargar ofertas en la tabla
         function cargarOfertas() {
-            const lista = document.getElementById("ofertas-lista");
-            lista.innerHTML = "<tr><td colspan='4'>Cargando ofertas...</td></tr>";
+            const tabla = document.getElementById("tabla-ofertas");
+            tabla.innerHTML = "<tr><td colspan='5'>Cargando ofertas...</td></tr>";
 
-            const db = firebase.firestore();
             db.collection("ofertas").orderBy("fecha", "desc").get()
             .then(snapshot => {
-                lista.innerHTML = "";
+                if (snapshot.empty) {
+                    tabla.innerHTML = "<tr><td colspan='5'>No hay ofertas registradas</td></tr>";
+                    return;
+                }
+
+                tabla.innerHTML = "";
                 snapshot.forEach(doc => {
                     const oferta = doc.data();
-                    const tr = document.createElement("tr");
-
-                    tr.innerHTML = `
-                        <td>${oferta.nombre}</td>
-                        <td>${oferta.subtotal.toFixed(2)}</td>
-                        <td>${oferta.total.toFixed(2)}</td>
-                        <td>
-                            <button class="editar" onclick="editarOferta('${doc.id}')">✏️ Editar</button>
-                            <button class="pdf" onclick="generarPDF('${doc.id}')">📄 PDF</button>
-                        </td>
+                    const fila = `
+                        <tr>
+                            <td>${oferta.ofertaId}</td>
+                            <td>${oferta.nombre}</td>
+                            <td>${oferta.importe} €</td>
+                            <td>${oferta.estado}</td>
+                            <td>
+                                <button class="btn-small" onclick="editarOferta('${doc.id}')">✏️ Editar</button>
+                                <button class="btn-small" onclick="generarPDF('${doc.id}')">📄 PDF</button>
+                                <button class="btn-small delete-btn" onclick="eliminarOferta('${doc.id}')">🗑️ Eliminar</button>
+                            </td>
+                        </tr>
                     `;
-                    lista.appendChild(tr);
+                    tabla.innerHTML += fila;
                 });
             })
             .catch(error => console.error("❌ Error al cargar ofertas:", error));
         }
 
-        // 🔹 Redirigir a la página de edición
+        // 🔹 Redirigir a la edición de una oferta
         function editarOferta(ofertaId) {
-            window.location.href = `editor.html?ofertaId=${ofertaId}`;
+            window.location.href = `editar.html?ofertaId=${ofertaId}`;
         }
 
-        // 🔹 Redirigir a la página de generación de PDF
+        // 🔹 Redirigir a la generación de PDF
         function generarPDF(ofertaId) {
             window.location.href = `generator.html?ofertaId=${ofertaId}`;
         }
 
-        window.onload = cargarOfertas;
-    </script>
+        // 🔹 Eliminar una oferta
+        function eliminarOferta(ofertaId) {
+            if (!confirm("¿Estás seguro de que deseas eliminar esta oferta?")) return;
 
+            db.collection("ofertas").doc(ofertaId).delete()
+            .then(() => {
+                alert("✅ Oferta eliminada correctamente.");
+                cargarOfertas(); // Recargar la lista
+            })
+            .catch(error => console.error("❌ Error al eliminar oferta:", error));
+        }
+    </script>
 </body>
 </html>
