--- a/gestion/ofertas/index.html
+++ b/gestion/ofertas/index.html
@@ -110,7 +110,9 @@
 
         // 🔹 Redirigir a la edición de una oferta
         function editarOferta(ofertaId) {
-            window.location.href = `editar.html?ofertaId=${ofertaId}`;
+    window.location.href = `creator.html?ofertaId=${ofertaId}`;
+}
+
         }
 
         // 🔹 Redirigir a la generación de PDF
